# djangocms-page-meta

./: .bumpversion.cfg  .checkignore  .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  addon.json  aldryn_config.py  cms_helper.py  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tasks.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: lint.yml  publish.yml  test.yml
.tx/: config
changes/: 116.feature  135.feature  138.bugfix  141.feature  150.bugfix  151.bugfix  155.feature  157.feature  173.bugfix  176.feature  178.bugfix  181.bugfix  197.bugfix  214.bugfix
djangocms_page_meta/: __init__.py  addon.json  admin.py  apps.py  cms_toolbar.py  cms_toolbars.py  forms.py  models.py  settings.py  utils.py
djangocms_page_meta/migrations/: 0001_initial.py  0002_auto_20150706_1605.py  0002_auto_20150807_0936.py  0002_auto__add_field_titlemeta_og_description__add_field_titlemeta_twitter_.py  0003_auto_20151220_1734.py  0004_auto_20160409_1852.py  0005_pagemeta_fb_pages.py  0006_auto_20160423_1859.py  0007_auto_20160530_2257.py  0008_auto_20160607_0736.py  0008_auto_20160609_0754.py  0009_auto_20171230_1954.py  0010_auto_20180108_2316.py  0011_auto_20190218_1010.py  0012_auto_20200424_1148.py  0012_auto_20200706_1230.py  0013_auto_20200821_1015.py  0013_auto_20200821_1457.py  (+5 more)
docs/: autodoc.rst  conf.py  configuration.rst  index.rst  installation.rst  usage.rst
tests/: 1111test_adminpage.py  __init__.py  test_adminpage.py  test_general.py  test_templatetags.py  test_toolbar.py
(+31 files in other folders)
