[metadata]
name = djangocms-page-meta
version = attr: djangocms_page_meta.__version__
url = https://github.com/nephila/djangocms-page-meta
project_urls =
	Documentation = https://djangocms-page-meta.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.digital
description = OpenGraph, Twitter Card and Schema.org snippet tags for django CMS 3 pages
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
keywords = django cms, meta tags, OpenGraph, Twitter Cards, Schema.org, django-app-enabler addon
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
	django-cms>=3.7
	django-meta>=2.0.0
	django-filer>=1.2
setup_requires =
	setuptools
packages = djangocms_page_meta
python_requires = >=3.7
test_suite = cms_helper.run
zip_safe = False

[options.package_data]
* = *.txt, *.rst
djangocms_page_meta = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
docs =
	django<5.0
    sphinx>2,<5
	djangocms-page-tags

[sdist]
formats = zip

[bdist_wheel]
universal = 1
